# smart-agent

./: .env.example  .gitignore  PROJECT_HEALTH.md  README.md  STATUS.md  __main__.py  cli.py  pyproject.toml  requirements.txt  start-daemon.sh
.githooks/: pre-commit  pre-push
.github/workflows/: secret-scan.yml
core/: ai_analyzer.py  daemon.py  detector.py  monitor.py  profiler.py  reactions.py  store.py
data/: ignore.json
docs/: improvements.md
