[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-agent"
version = "1.0.0"
description = "System Anomaly Detector for CachyOS"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "psutil>=5.9.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
smart-agent = "cli:main"

[tool.setuptools.packages]
find = {}
